# bgplot

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  changelog.md  main.py  pyproject.toml
bgplot/: __init__.py
bgplot/core/: logger.py
bgplot/entities/: __init__.py  axes.py  line.py  oriented_point.py  plane.py  point.py  vector.py
bgplot/features/: operations.py
bgplot/features/graphics/: graphics.py
bgplot/features/graphics/core/: colors.py
bgplot/features/graphics/use_cases/: axes_plotting.py  line_plotting.py  path_plotting.py  plane_plotting.py  point_plotting.py  settings.py  vector_plotting.py
bgplot/features/operations/: operations.py
bgplot/use_cases/: __init__.py  graphics.py  operations.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/src/: examples.html  (+2 more)
docs/src/: api_reference.rst  examples.rst
docs/src/modules/: line.rst
src/assets/: ur3.yaml
src/core/: logger.py
src/entities/: __init__.py  line.py  manipulator_data.py  plane.py  vector.py
src/use_cases/: forward_kinematics.py  graphics.py  inverse_transformation.py  manipulator_data_getter.py  yaml_robot_parser.py
tests/: test.py
tests/entities/: entities_test.py
tests/graphics/: axes_plotting_test.py  colors_test.py  graphics_setting_test.py  line_plotting_test.py  plane_plotting_test.py  point_plotting_test.py  vector_plotting_test.py
tests/operations/: operations_test.py
(+31 files in other folders)
