[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bgplot"
version = "0.0.8"
authors = [
  { name="Vistor"},
]
description = "A python library for basic geometry plotting that uses matplotlib as client"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/vistormu/basic_geometry_plotter"
"Bug Tracker" = "https://github.com/vistormu/basic_geometry_plotter/issues"